--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>Dietario</title>
 </head>
 <body>
-    <h1>Prueba de javaScript</h1>
+    <h1>Encontra tu dieta deseada!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus sint quasi magnam libero tempora unde perspiciatis at, a non omnis maiores sunt inventore, error obcaecati tempore quas quo molestias!</p>
-<script src="./index.js"></script>
+<script src="index2.js"></script>
 </body>
 </html>
