--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Encontra tu dieta deseada!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus sint quasi magnam libero tempora unde perspiciatis at, a non omnis maiores sunt inventore, error obcaecati tempore quas quo molestias!</p>
-<script src="index2.js"></script>
+<script src="./index2.js"></script>
 </body>
 </html>
