--- a/index2.html
+++ b/index2.html
@@ -38,8 +38,8 @@
     
                 <label for="status">Estado:</label> 
                 <select name="status" id="status" required>
-                    <option value="Pendiente">Pendiente</option>
-                    <option value="Enviada">Enviada</option>
+                    <option value="pendiente">Pendiente</option>
+                    <option value="enviada">Enviada</option>
                 </select>
     
                 <label id="email">Mail:</label> 
@@ -59,6 +59,8 @@
         </div>
     </main>
  
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./index2.js"></script>
 </body>
 </html>
