--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,11 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./index.css">
-     <title>Tercer entrega</title>
+     <title>Usuarios semanales</title>
 </head>
 <body>
     <header>
-        <h1 id="title">Lista de Usuarios!</h1>
+        <h1 id="title">-Lista de Usuarios-</h1>
     </header>    
     <main>
         <section id="create" class="conteiner">
@@ -38,8 +38,8 @@
     
                 <label for="status">Estado:</label> 
                 <select name="status" id="status" required>
-                    <option value="pendiente">Pendiente</option>
-                    <option value="enviada">Enviada</option>
+                    <option value="Pendiente">Pendiente</option>
+                    <option value="Enviada">Enviada</option>
                 </select>
     
                 <label id="email">Mail:</label> 
@@ -49,12 +49,13 @@
             </form>
         </section>
         <section id="list">
-                <h2>Estado de Usuarios</h2>
+                <h2>-Estado de Usuarios-</h2>
                 <section>
                 <div id="datos_container"> </div>
                     <hr>
         </section>
-        ♠<div>
+        ♠
+        <div>
             <a href="./index1.html"><button class="btn-go">Inicio</button></a>
         </div>
     </main>
